<resources>
    <string name="app_name">Ghostrunner_app_final</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="button_groups">Groups</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_options">Options</string>
    <string name="button_about">About</string>

    <string name="button_abort_run">Abort Run</string>
    <string name="button_abort_run_confirm">Confirm Abort Run</string>
    <string name="button_back_to_main">Main Menu</string>
    <string name="button_choose_group_distance">Choose Group/Distance</string>
    <string name="button_create_group">Create</string>
    <string name="button_delete_user">Delete Account</string>
    <string name="button_deleter_user_confirm">Confirm Account Deletion</string>
    <string name="button_edit_user">Edit User Profile</string>
    <string name="button_edit_user_confirm">Save Changes</string>
    <string name="button_group_statistics">Group Statistics</string>
    <string name="button_group_view">Group View</string>
    <string name="button_invitations">Invitations</string>
    <string name="button_invite_external">Invite (External)</string>
    <string name="button_invite_internal">Invite (Internal)</string>
    <string name="button_invite_internal_picked">Invite User</string>
    <string name="button_invite_internal_confirm">Confirm Invite</string>
    <string name="button_invite_user">Invite Friend</string>
    <string name="button_kick_user">Kick From Group</string>
    <string name="button_logout">Log Out</string>
    <string name="button_main_menu">Ghostrunner</string>
    <string name="button_make_user_admin">Make Admin</string>
    <string name="button_rename_group">Rename Group</string>
    <string name="button_run_statistics">Run Statistics</string>
    <string name="button_run">Run</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_run">Run</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="title_activity_invitations">Invitations</string>
    <string name="title_activity_group_view">GroupView</string>
    <string name="title_activity_make_user_admin">MakeUserAdmin</string>
    <string name="title_activity_kick_user">KickUser</string>
    <string name="title_activity_rename_group">RenameGroup</string>
    <string name="title_activity_invite_user">InviteUser</string>
    <string name="title_activity_group_statistics">GroupStatistics</string>
    <string name="title_activity_invite_internal">InviteInternal</string>
    <string name="title_activity_invite_external">InviteExternal</string>
    <string name="title_activity_invite_internal_confirm">InviteInternalConfirm</string>
    <string name="title_activity_choose_group_distance">ChooseGroupDistance</string>
    <string name="title_activity_abort_run">AbortRun</string>
    <string name="title_activity_run_statistics">RunStatistics</string>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_delete_user">DeleteUser</string>
    <string name="title_activity_delete_user_confirm">DeleteUserConfirm</string>
    <string name="title_activity_edit_user_confirm">EditUserConfirm</string>
    <string name="title_activity_start_run">Run</string>
    <string name="title_activity_run_test">RunTestActivity</string>
    <string name="title_service_run_service">RunService</string>
    <string name="title_service_elevation_service">SRTMElevationService</string>

</resources>
