<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="winzer.ghostrunner_app_final.Activities.Group.GroupView">

    <!-- ONLY AS ADMIN!!! -->
    <Button android:text="@string/button_make_user_admin" android:onClick="goToMakeUserAdmin"/>
    <Button android:text="@string/button_kick_user" android:onClick="goToKickUser"/>
    <Button android:text="@string/button_rename_group" android:onClick="goToRenameGroup"/>

    <Button android:text="@string/button_invite_user" android:onClick="goToInviteUser"/>
    <Button android:text="@string/button_group_statistics" android:onClick="goToGroupStatistics"/>
    <Button android:text="@string/button_start_run" android:onClick="goToRun"/>

</TableLayout>
